--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Youtube</title>
 
+    <link rel="stylesheet" type="text/css" href="../resources/css/custom.css">
+
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
 
